# sgieval

./: CMakeLists.txt  Readme.md
doc/: entityblueprints.txt
include/sgievaldebug/: DebugEntityGrid.h
include/sgievallib/: AttackComponent.h  Component.h  Entity.h  EntityGrid.h  HealthComponent.h  MovementComponent.h  Rectangle2D.h  SgiTypes.h  UnsortedUIntPairSet.h
src/: CMakeLists.txt
src/sgievallib/: CMakeLists.txt  Entity.cpp  EntityGrid.cpp  Rectangle2D.cpp
src/sgievalmain/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/sgievallib/: CMakeLists.txt  main.cpp
